# PCO001-AVAL02

./: .gitignore  LICENSE  README.md
1. Seminario/: README.md
1. Seminario/projeto/: if-beamer.cls  seminario.tex
1. Seminario/projeto/Fontes/: Listas_Ponteiro_2021.cpp
1. Seminario/projeto/Fontes/implementacao/: impl-1.cpp  impl-10.cpp  impl-11.cpp  impl-12.cpp  impl-13.cpp  impl-14.txt  impl-2.cpp  impl-3.cpp  impl-4.cpp  impl-5.cpp  impl-6.cpp  impl-7.cpp  impl-8.txt  impl-9.cpp
2. tad_grafo/: CMakeLists.txt  Grafo.cpp  Grafo.h  README.md  main.cpp  tad_grafo.cbp
2. tad_grafo/tads_auxiliares/: FilaEstatica.cpp  FilaEstatica.h  ListaDinEncadeada.cpp  ListaDinEncadeada.h
3. hands_on/: README.md
3. hands_on/front/: .gitignore  README.md  angular.json  package.json
3. hands_on/front/src/: custom-theme.scss  index.html  styles.css
3. hands_on/front/src/app/: app-routing.module.ts  app.module.ts  auth.guard.ts
3. hands_on/front/src/app/components/add-post/: add-post.component.css  add-post.component.html  add-post.component.ts
3. hands_on/front/src/app/components/login/: login.component.css  login.component.html  login.component.ts
3. hands_on/front/src/app/components/online-users/: online-users.component.html  online-users.component.ts
3. hands_on/front/src/app/interceptor/: auth.interceptor.ts  error.interceptor.ts
3. hands_on/front/src/environments/: config-environment.ts  environment.ts
3. hands_on/server/: README.md  auth.js  broadcast.js  neo4j.js  package.json  routes.js  server.js  websocket.js
(+9 files in other folders)
